--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   data: ^0.12.0
+  hooks_riverpod: ^2.5.1
+  flutter_hooks:
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +51,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner:
+  custom_lint:
+  riverpod_generator: ^2.4.2
+  riverpod_lint: ^2.3.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
